clmpkg/objects/AgreementSponsorship__c.object
<CustomObject>
    <description>Object is used for Content License agreements, which can have one-to-many sponsorships associated to it.</description>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Sponsorships</relationshipLabel>
        <relationshipName>Agreement_Sponsorships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CustomSponsorshipPaymentFrequency__c</fullName>
        <label>Custom Sponsorship Payment Frequency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsBlankCheck__c</fullName>
        <description>Do not delete. Used by Next Steps Component</description>
        <formula>OR(
   AND(ISPICKVAL(SponsorshipPaymentFrequency__c, &quot;Custom&quot;), ISBLANK(CustomSponsorshipPaymentFrequency__c)),
   ISBLANK(SponsorshipAmount__c) ,
   ISBLANK(SponsorshipDate__c) ,
   ISBLANK(TEXT(SponsorshipPaymentFrequency__c)
   )
  )</formula>
        <label>IsBlankCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SponsorshipAmount__c</fullName>
        <description>Field is used by Content Acquisition Team and is associated to the Sponsorship Fee Payments process.</description>
        <inlineHelpText>Please enter a currency amount.</inlineHelpText>
        <label>Sponsorship ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SponsorshipDate__c</fullName>
        <label>Sponsorship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SponsorshipPaymentFrequency__c</fullName>
        <label>Sponsorship Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agreement Sponsorship</label>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Agreement Sponsorship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Sponsorships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CustomSponsorshipPaymentFrequency</fullName>
        <active>true</active>
        <description>Validates that the Custom Sponsorship Payment Frequency field always has a value, if the Sponsorship Payment Frequency field value equals &quot;Custom&quot;.</description>
        <errorConditionFormula>AND(
ISPICKVAL(SponsorshipPaymentFrequency__c,&quot;Custom&quot;),
ISBLANK(CustomSponsorshipPaymentFrequency__c)
)</errorConditionFormula>
        <errorDisplayField>CustomSponsorshipPaymentFrequency__c</errorDisplayField>
        <errorMessage>Since Sponsorship Payment Frequency is &apos;Custom&apos;, please enter text into the Custom Sponsorship Payment Frequency field.</errorMessage>
    </validationRules>
</CustomObject>